# apto

./: .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: habits.rs  lib.rs  main.rs  models.rs  templates.rs
src-tauri/src/db/: init.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/habits/: models.rs
src-tauri/src/features/habits/commands/: crud.rs  habit_completion.rs  mod.rs  reminders.rs  stats.rs  streaks.rs  tag.rs
src-tauri/src/features/habits/utils/: frequency.rs  mod.rs
src-tauri/src/features/habits/utils/streaks/: mod.rs
src-tauri/src/features/notes/: models.rs
src-tauri/src/features/notes/commands/: attachments.rs  crud.rs  folders.rs  mod.rs  revisions.rs  tags.rs
src-tauri/src/ui/: theme.rs
src/lib/components/: TitleBar.svelte
src/lib/components/habits/: CreateHabit.svelte  HabitTracking.svelte  ViewHabits.svelte
src/lib/components/notes/: DeleteConfirmationModal.svelte  NoteEditor.svelte  NotesList.svelte  NotesManagement.svelte
src/lib/components/notes/folders/: FolderModal.svelte
src/lib/components/notes/tags/: TagManagement.svelte  TagModal.svelte
src/lib/stores/: route.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/habits/: +page.svelte
src/routes/notes/: +page.svelte
