[package]
name = "apto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6.0"
dark-light = "1.0.0"
fs = "0.0.5"
tauri-plugin-fs = "2"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
thiserror = "2.0.12"
log = "0.4.27"
rand = "0.9.1"
